Fixed spacing on modal buttons

--- a/client/src/components/Exercises/ExerModal/exermodal.scss
+++ b/client/src/components/Exercises/ExerModal/exermodal.scss
@@ -13,6 +13,7 @@
 .exercise-modal-row {
 	display: flex;
 	justify-content: center;
+	margin-top: 40px;
 }
 
 button {
