--- a/client/src/components/Nutrition/FoodModal/foodmodal.scss
+++ b/client/src/components/Nutrition/FoodModal/foodmodal.scss
@@ -13,7 +13,7 @@
 .nutrition-modal-row {
 	display: flex;
 	justify-content: center;
-	margin-top: 20px;
+	margin-top: 60px;
 }
 
 button {
