--- a/client/src/components/Water/waterModal/waterModal.scss
+++ b/client/src/components/Water/waterModal/waterModal.scss
@@ -13,6 +13,7 @@
 .water-modal-row {
 	display: flex;
 	justify-content: center;
+	margin-top: 40px;
 }
 
 button {
